--- a/views/partials/content.jade
+++ b/views/partials/content.jade
@@ -85,7 +85,7 @@ ul.list-group
           .type-ellipsis #{ service_label || '@service_label'}
         .col-xs-5.col-sm-5.col-md-5.col-lg-5
           .type-neutral-4.small
-            .type-ellipsis SERVICE NAME
+            .type-ellipsis SERVICE (NAME)
           .type-ellipsis #{ service_name || '@service_name'}
         .col-xs-5.col-sm-5.col-md-5.col-lg-5
           .type-neutral-4.small
